--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,10 +20,23 @@
 }
 
 body {
-  background: var(--background);
+  background: var(--color-yellow-100);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.custom-toast {
+  background: #fff !important;
+  border-radius: 12px !important;
+  padding: 12px !important;
+  box-shadow: 0px 4px 14px rgba(0,0,0,0.12);
+}
+
+.custom-progress {
+  background: #3b82f6 !important;
+  height: 4px !important;
+}
+
 
 html,
 body {
